// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render (MEDIUM) button when we apply (MEDIUM) 1`] = `
<button
  className="btn btn-primary btn-medium"
  disabled={false}
>
  Button
</button>
`;

exports[`Button component should render (disapled) button when we apply disapled 1`] = `
<button
  className="btn btn-primary btn-medium"
  disabled={true}
>
  Button
</button>
`;

exports[`Button component should render (large) button when we apply (large) 1`] = `
<button
  className="btn btn-primary btn-large"
  disabled={false}
>
  Button
</button>
`;

exports[`Button component should render (lefticon) button when we apply lefticon 1`] = `
<button
  className="btn btn-primary btn-medium left-icon"
  disabled={false}
>
  <span>
    <svg
      data-file-name="SvgButtonArowDown"
    />
  </span>
  Button
</button>
`;

exports[`Button component should render (onlyicon)  button when we apply nothing 1`] = `
<button
  className="btn btn-primary btn-medium btn-rounded"
  disabled={false}
>
  <span>
    <svg
      data-file-name="SvgButtonArowDown"
    />
  </span>
</button>
`;

exports[`Button component should render (primary) button when we apply primary 1`] = `
<button
  className="btn btn-primary btn-medium"
  disabled={false}
>
  Button
</button>
`;

exports[`Button component should render (righticon) button when we apply righticon 1`] = `
<button
  className="btn btn-primary btn-medium right-icon"
  disabled={false}
>
  Button
  <span>
    <svg
      data-file-name="SvgButtonArowDown"
    />
  </span>
</button>
`;

exports[`Button component should render (secondary) button when we apply (secondary) 1`] = `
<button
  className="btn btn-secondary btn-medium"
  disabled={false}
>
  Button
</button>
`;

exports[`Button component should render (small) button when we apply (small) 1`] = `
<button
  className="btn btn-primary btn-small"
  disabled={false}
>
  Button
</button>
`;

exports[`Button component should render (text) button when we apply text 1`] = `
<button
  className="btn btn-text btn-medium"
  disabled={false}
>
  Button
</button>
`;
